[package]
name = "gdps"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.40"
sha1 = "0.10.6"
steamid-ng = "1.0.0"
tracing = "0.1.41"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.axum]
version = "0.8.3"
features = ["tracing"]

[dependencies.axum-extra]
version = "0.10.1"
features = ["form"]

[dependencies.tower-http]
version = "0.6.2"
features = ["trace"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.sqlx]
version = "0.8.5"
features = ["runtime-tokio", "postgres", "chrono", "macros"]
