[package]
name = "gdps"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
flate2 = "1.1.1"
hex = "0.4.3"
rand = "0.9.1"
regex = "1.11.1"
sha1 = "0.10.6"
sha2 = "0.11.0-pre.5"
tracing = "0.1.41"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.axum]
version = "0.8.3"
features = ["tracing", "macros"]

[dependencies.axum-extra]
version = "0.10.1"
features = ["form"]

[dependencies.tower-http]
version = "0.6.2"
features = ["trace"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.sqlx]
version = "0.8.5"
features = ["runtime-tokio", "postgres", "chrono", "macros"]
